<resources>
    <string name="app_name">MyAndroid</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="btn_login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="btn_next">Next</string>
    <string name="btn_back">Back</string>
</resources>